Reformatted page files

--- a/directions.html
+++ b/directions.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta content="width=device-width, initial-scale=1" name="viewport">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
-<meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
-<meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>Jig's Up | Directions</title>
-<!-- Bootstrap -->
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-<link href="css/custom.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+	<meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+	<meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>Jig's Up | Directions</title>
+	<!-- Bootstrap -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/custom.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
 
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -100,10 +101,10 @@
 						</a>
 					</li>
 					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
               <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
             </a>
-          </li>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -114,68 +115,72 @@
 
 <body>
 	<div class="wrapper">
-  <br /> <!-- BREAK -->
-  <br /> <!-- BREAK -->
-  <br /> <!-- BREAK -->
-  <section id="directionsHeader">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <h2 class="headers">Directions</h2>
-          <br /> <!-- BREAK -->
-        </div>
-        <!-- #col-sm-8  -->
-      </div>
-      <!-- #row  -->
-    </div>
-    <!-- #container  -->
-  </section>
-  <div class="container">
-    <div class="panel-group col-md-6" id="accordion">
-      <div class="panel panel-default">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-          <div class="panel-heading">
-            <h4 class="panel-title">
+		<br />
+		<!-- BREAK -->
+		<br />
+		<!-- BREAK -->
+		<br />
+		<!-- BREAK -->
+		<section id="directionsHeader">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6">
+						<h2 class="headers">Directions</h2>
+						<br />
+						<!-- BREAK -->
+					</div>
+					<!-- #col-sm-8  -->
+				</div>
+				<!-- #row  -->
+			</div>
+			<!-- #container  -->
+		</section>
+		<div class="container">
+			<div class="panel-group col-md-6" id="accordion">
+				<div class="panel panel-default">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+						<div class="panel-heading">
+							<h4 class="panel-title">
               The Edge Pub &amp; Eatery
             </h4>
-            <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-          </div>
-        </a>
-        <div id="collapse1" class="panel-collapse collapse ">
-          <div class="panel-body">
-            <iframe alt="The Edge Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-            allowfullscreen></iframe>
-          </div>
-        </div>
-    	</div>
-      <div class="panel panel-default">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-          <div class="panel-heading">
-            <h4 class="panel-title">
+							<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+						</div>
+					</a>
+					<div id="collapse1" class="panel-collapse collapse ">
+						<div class="panel-body">
+							<iframe alt="The Edge Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+							  allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+						<div class="panel-heading">
+							<h4 class="panel-title">
               The View
             </h4>
-            <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-          </div>
-        </a>
-      	<div id="collapse2" class="panel-collapse collapse">
-          <div class="panel-body">
-            <iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class = "col-md-6">
-      <img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
-    </div>
-  </div>
+							<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+						</div>
+					</a>
+					<div id="collapse2" class="panel-collapse collapse">
+						<div class="panel-body">
+							<iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
+			</div>
+		</div>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
-</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+	</div>
 </body>
 
 <footer>
@@ -196,7 +201,7 @@
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-	</div>
+		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 		</p>
@@ -219,11 +224,12 @@
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-		</div>
+			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 			<!-- BREAK -->
 		</p>
 	</div>
 </footer>
+
 </html>
