--- a/pastResults.html
+++ b/pastResults.html
@@ -99,10 +99,10 @@
 						</a>
 					</li>
 					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
               <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
             </a>
-          </li>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -113,31 +113,36 @@
 
 <body>
 	<div class="wrapper">
-  <section id="directionsHeader">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <h2 class="headers">Past Results</h2>
-          <br /> <!-- BREAK -->
-        </div>
-        <!-- #col-sm-8  -->
-      </div>
-      <!-- #row  -->
-    </div>
-    <!-- #container  -->
-  </section>
-  <section id="content">
-    <div class="container">
-      <div class="panel-group col-lg-12" id="accordion">
-<!-- new-->
+		<section id="directionsHeader">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6">
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<h2 class="headers">Past Results</h2>
+						<br />
+						<!-- BREAK -->
+					</div>
+					<!-- #col-sm-8  -->
+				</div>
+				<!-- #row  -->
+			</div>
+			<!-- #container  -->
+		</section>
+		<section id="content">
+			<div class="container">
+				<div class="panel-group col-lg-12" id="accordion">
+					<!-- new-->
 
 
 
-<!-- <div class="panel panel-default">
+					<!-- <div class="panel panel-default">
 	<a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
 		<div class="panel-heading">
 			<h4 class="panel-title">
@@ -156,23 +161,23 @@
 	</div>
 </div> -->
 
-<!-- new -->
+					<!-- new -->
 
 
-<script src="scripts/tableBuilder.js"></script>
+					<script src="scripts/tableBuilder.js"></script>
 
 
-				<div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
-            <div class="panel-heading">
-              <h4 class="panel-title">
+					<div class="panel panel-default">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
+							<div class="panel-heading">
+								<h4 class="panel-title">
                 2017
               </h4>
-              <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-            </div>
-					</a>
-					<div id="collapse0" class="panel-collapse collapse ">
-						<div class="panel-body">
+								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+							</div>
+						</a>
+						<div id="collapse0" class="panel-collapse collapse ">
+							<div class="panel-body">
 								<div class="row">
 									<div class="col-sm-12">
 										<h2 class="headers">2017 Fish Prize Winners</h2>
@@ -195,63 +200,63 @@
 									</div>
 								</div>
 
-									<div class="row">
-						        <div class="col-sm-12">
-											<h2 class="headers">2017 Raffle Prize Winners</h2>
-											<div class="table-responsive">
-												<table class="table">
-													<thead>
-														<tr>
-															<th>Prize</th>
-															<th>Contestant</th>
-														</tr>
-													</thead>
-													<tbody id="2017RaffleWinner">
-													</tbody>
-												</table>
-													</div>
-													<!-- #table-responsive -->
-															</div>
-														</div>
+								<div class="row">
+									<div class="col-sm-12">
+										<h2 class="headers">2017 Raffle Prize Winners</h2>
+										<div class="table-responsive">
+											<table class="table">
+												<thead>
+													<tr>
+														<th>Prize</th>
+														<th>Contestant</th>
+													</tr>
+												</thead>
+												<tbody id="2017RaffleWinner">
+												</tbody>
+											</table>
+										</div>
+										<!-- #table-responsive -->
+									</div>
+								</div>
 
-										<div class="row">
-											<div class="col-sm-12">
-												<h2 class="headers">2017 Species Prize Winners</h2>
-												<div class="table-responsive">
-													<table class="table">
-														<thead>
-															<tr>
-																<th>Contestant</th>
-																<th>Weight</th>
-																<th>Species</th>
-																<th>Prize</th>
-															</tr>
-														</thead>
-														<tbody id="2017SpeciesWinner">
-														</tbody>
-													</table>
+								<div class="row">
+									<div class="col-sm-12">
+										<h2 class="headers">2017 Species Prize Winners</h2>
+										<div class="table-responsive">
+											<table class="table">
+												<thead>
+													<tr>
+														<th>Contestant</th>
+														<th>Weight</th>
+														<th>Species</th>
+														<th>Prize</th>
+													</tr>
+												</thead>
+												<tbody id="2017SpeciesWinner">
+												</tbody>
+											</table>
 
-														<!-- #table-responsive -->
-		            </div>
-		        	</div>
+											<!-- #table-responsive -->
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
 
-<!-- new -->
+					<!-- new -->
 
-				<div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-            <div class="panel-heading">
-              <h4 class="panel-title">
+					<div class="panel panel-default">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+							<div class="panel-heading">
+								<h4 class="panel-title">
                 2016
               </h4>
-              <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-            </div>
-					</a>
-					<div id="collapse1" class="panel-collapse collapse ">
-						<div class="panel-body">
+								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+							</div>
+						</a>
+						<div id="collapse1" class="panel-collapse collapse ">
+							<div class="panel-body">
 
 								<div class="row">
 									<div class="col-sm-12">
@@ -279,110 +284,114 @@
 													<th>Prize</th>
 													<th>Sponsor</th>
 												</thead>
-											<tbody id="2016RaffleWinner">
-		                  </tbody>
-		                </table>
-		              <!-- #table-responsive -->
-		            </div>
-		        	</div>
+												<tbody id="2016RaffleWinner">
+												</tbody>
+											</table>
+											<!-- #table-responsive -->
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
 
-						<!--new -->
-        <div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-            <div class="panel-heading">
-              <h4 class="panel-title">
+					<!--new -->
+					<div class="panel panel-default">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+							<div class="panel-heading">
+								<h4 class="panel-title">
                 2015
               </h4>
-              <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-            </div>
-          </a>
-          <div id="collapse2" class="panel-collapse collapse ">
-            <div class="panel-body">
-							<h2 class="headers">2015 Fish Prize Winners</h2>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Place</th>
-                      <th>Contestant</th>
-                      <th>Weight</th>
-                      <th>Species</th>
-                      <th>Prize</th>
-                    </tr>
-                  </thead>
-                  <tbody id="2015FishPrizeWinner">
-                  </tbody>
-                </table>
-              </div>
-              <!-- #table-responsive -->
+								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+							</div>
+						</a>
+						<div id="collapse2" class="panel-collapse collapse ">
+							<div class="panel-body">
+								<h2 class="headers">2015 Fish Prize Winners</h2>
+								<div class="table-responsive">
+									<table class="table">
+										<thead>
+											<tr>
+												<th>Place</th>
+												<th>Contestant</th>
+												<th>Weight</th>
+												<th>Species</th>
+												<th>Prize</th>
+											</tr>
+										</thead>
+										<tbody id="2015FishPrizeWinner">
+										</tbody>
+									</table>
+								</div>
+								<!-- #table-responsive -->
 
-              <h2 class="headers">2015 Raffle Ticket Prizes</h2>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Prize #</th>
-                      <th>Name</th>
-                      <th>Prize</th>
-                    </tr>
-                  </thead>
-                  <tbody id="2015RaffleWinner">
-                  </tbody>
-                </table>
-              </div>
-              <!-- #table-responsive -->
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-            <div class="panel-heading">
-              <h4 class="panel-title">
+								<h2 class="headers">2015 Raffle Ticket Prizes</h2>
+								<div class="table-responsive">
+									<table class="table">
+										<thead>
+											<tr>
+												<th>Prize #</th>
+												<th>Name</th>
+												<th>Prize</th>
+											</tr>
+										</thead>
+										<tbody id="2015RaffleWinner">
+										</tbody>
+									</table>
+								</div>
+								<!-- #table-responsive -->
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+							<div class="panel-heading">
+								<h4 class="panel-title">
                 2014
               </h4>
-              <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-            </div>
-          </a>
-          <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">
-							<h2 class="headers">2014 Fish Prize Winners</h2>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Place</th>
-                      <th>Contestant</th>
-                      <th>Weight</th>
-                      <th>Species</th>
-                      <th>Prize</th>
-                    </tr>
-                  </thead>
-                  <tbody id="2014FishPrizeWinner">
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      <!-- #table-responsive -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-  </section>
+								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+							</div>
+						</a>
+						<div id="collapse3" class="panel-collapse collapse">
+							<div class="panel-body">
+								<h2 class="headers">2014 Fish Prize Winners</h2>
+								<div class="table-responsive">
+									<table class="table">
+										<thead>
+											<tr>
+												<th>Place</th>
+												<th>Contestant</th>
+												<th>Weight</th>
+												<th>Species</th>
+												<th>Prize</th>
+											</tr>
+										</thead>
+										<tbody id="2014FishPrizeWinner">
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- #table-responsive -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+		</section>
 
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
-</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+		</div>
 </body>
 
 <footer>
@@ -434,4 +443,5 @@
 		</p>
 	</div>
 </footer>
+
 </html>
