--- a/schedule.html
+++ b/schedule.html
@@ -111,8 +111,7 @@
 </head>
 
 <body>
-	<div class="wrapper>"
-	<section id="content">
+	<div class="wrapper>" <section id="content">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-6">
@@ -148,41 +147,41 @@
 							<th>Event</th>
 						</tr>
 					</thead>
-						<tr>
-							<td>Lake Wissota</td>
-							<td>7:00AM</td>
-							<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
-						</tr>
-						<tr>
-							<td>The View &amp; The Edge Weigh in Stations</td>
-							<td>9:00AM</td>
-							<td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
-						</tr>
-						<tr>
-							<td>Lake Wissota</td>
-							<td>12:00PM</td>
-							<td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
-						</tr>
-						<tr>
-							<td>The View &amp; The Edge </td>
-							<td>2:00PM</td>
-							<td>Weigh-in Stations close, must be in line by 2:00PM to register your fish</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>3:00PM</td>
-							<td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>4:00PM</td>
-							<td>Fish contest winners announced and prizes distributed</td>
-						</tr>
-						<tr>
-							<td>The View</td>
-							<td>5:00PM</td>
-							<td>Stick around for music and fish stories at the bar</td>
-						</tr>
+					<tr>
+						<td>Lake Wissota</td>
+						<td>7:00AM</td>
+						<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
+					</tr>
+					<tr>
+						<td>The View &amp; The Edge Weigh in Stations</td>
+						<td>9:00AM</td>
+						<td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
+					</tr>
+					<tr>
+						<td>Lake Wissota</td>
+						<td>12:00PM</td>
+						<td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
+					</tr>
+					<tr>
+						<td>The View &amp; The Edge </td>
+						<td>2:00PM</td>
+						<td>Weigh-in Stations close, must be in line by 2:00PM to register your fish</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>3:00PM</td>
+						<td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>4:00PM</td>
+						<td>Fish contest winners announced and prizes distributed</td>
+					</tr>
+					<tr>
+						<td>The View</td>
+						<td>5:00PM</td>
+						<td>Stick around for music and fish stories at the bar</td>
+					</tr>
 					</tbody>
 				</table>
 			</div>
@@ -195,16 +194,16 @@
 			<!-- BREAK -->
 			<br />
 			<!-- BREAK -->
-	</section>
+			</section>
 
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-</div>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+			<script src="js/main.js" type="text/javascript"></script>
+		</div>
 </body>
 
 <footer>
@@ -225,7 +224,7 @@
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-	</div>
+		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 		</p>
@@ -248,11 +247,12 @@
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-		</div>
+			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 			<!-- BREAK -->
 		</p>
 	</div>
 </footer>
+
 </html>
