--- a/liveResults.html
+++ b/liveResults.html
@@ -98,10 +98,10 @@
 						</a>
 					</li>
 					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
               <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
             </a>
-          </li>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -112,48 +112,62 @@
 
 <body>
 	<div class="wrapper">
-  <section id="content">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-6">
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <h2 class="headers">Live Results</h2>
-					<h3>Join us on February 10th on this page for live updates!</h3>
-        </div>
-				<div class="col-xs-6">
-					<br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-					<br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-					<br /> <!-- BREAK -->
-					<h3 class="headers">Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> for updates</h3>
-					<br /> <!-- BREAK -->
-					<br /> <!-- BREAK -->
-					<br /> <!-- BREAK -->
+		<section id="content">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-6">
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<h2 class="headers">Live Results</h2>
+						<h3>Join us on February 10th on this page for live updates!</h3>
+					</div>
+					<div class="col-xs-6">
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<h3 class="headers">Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> for updates</h3>
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+					</div>
+					<!-- #col-sm-6 -->
 				</div>
-        <!-- #col-sm-6 -->
-      </div>
-      <!-- #container -->
-			<!-- <div class="fluidmedia">
+				<!-- #container -->
+				<!-- <div class="fluidmedia">
 
       	<iframe src=""></iframe>
 
 			</div> -->
-			<!-- #table-responsive -->
-  </section>
+				<!-- #table-responsive -->
+		</section>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
-</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+		</div>
 </body>
 
 <footer>
@@ -174,7 +188,7 @@
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-	</div>
+		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 		</p>
@@ -197,11 +211,12 @@
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-		</div>
+			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 			<!-- BREAK -->
 		</p>
 	</div>
 </footer>
+
 </html>
