--- a/tickets.html
+++ b/tickets.html
@@ -82,27 +82,27 @@
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
 					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
-												<li class="social-media">
-													<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+					<li class="social-media">
+						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
 														<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
 													</a>
-												</li>
-												<li>
-													<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
 														<img src="images/twitter.png" class="twitter" </img>
 													</a>
-												</li>
-												<li>
-													<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
 														<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
 													</a>
-												</li>
-												<li>
-							            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
 							              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
 							            </a>
-							          </li>
-											</ul>
+					</li>
+				</ul>
 
 			</div>
 			<!-- /.navbar-collapse -->
@@ -112,8 +112,7 @@
 </head>
 
 <body>
-	<div class="wrapper"
-	<section id="content">
+	<div class="wrapper" <section id="content">
 		<div class="container">
 			<br />
 
@@ -123,8 +122,8 @@
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 			<blockquote>
-				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish!  Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-				of the number of fish registered.
+				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish! Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can
+				win big! All prizes will be distributed at the event, regardless of the number of fish registered.
 			</blockquote>
 
 			<ul class="list">
@@ -140,19 +139,19 @@
 			<h4 class="headers">Fish Ticket Availability:</h4>
 			<h4>Tickets will be available online until 10:00pm on Friday, February 9th. Fish tickets will be available on February 10th, 2017 at The View and at the Weigh-in Stations until 9am for $40. </h4>
 			<blockquote>
-				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View.
-				NOTE: You do not need to pick up your fish tickets until you are ready to weigh in a fish.
+				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your fish tickets until you are
+				ready to weigh in a fish.
 
 			</blockquote>
 
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler.  Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
+				$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler. Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
 
 				<br />
-				<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated.  After February 2nd, claim tickets will be available for
-				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
+				<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated. After February 2nd, claim tickets will be available
+				for pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.
 			</blockquote>
 
 
@@ -169,18 +168,19 @@
 					<li>Eau Claire Ford</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-					<li>UWEC Recreation </h3></li>
+					<li>UWEC Recreation </h3>
+					</li>
 				</ul>
 			</div>
-	</section>
+			</section>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-</div>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+			<script src="js/main.js" type="text/javascript"></script>
+		</div>
 </body>
 
 <footer>
@@ -201,7 +201,7 @@
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-	</div>
+		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 		</p>
@@ -224,7 +224,7 @@
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
-		</div>
+			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 			<!-- BREAK -->
