--- a/prizes.html
+++ b/prizes.html
@@ -121,7 +121,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h2 class="headers">Prizes</h2>
-					<h3 class="headers">2017 Prize List, check back in February for 2018 Prize List</h3>
+					<h3 class="headers">2018 Prize List</h3>
 					<div class="bs-example1">
 						<div id="myCarousel" class="carousel slide" data-ride="carousel1">
 							<!-- Wrapper for carousel items -->
@@ -158,7 +158,7 @@
 						<table class="table">
 							<thead>
 								<th>
-									<h3>Fish Prize List 2017</h3></th>
+									<h3>Fish Prize List 2018</h3></th>
 								<td></td>
 								</tr>
 							</thead>
@@ -168,11 +168,11 @@
 								</tr>
 								<tr>
 									<td>1</td>
-									<td>*$1,000 Cash</td>
+									<td>Scheels Cooler</td>
 								</tr>
 								<tr>
 									<td>2</td>
-									<td>8-in Ion Ice Auger w/ Reverse</td>
+									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
 								</tr>
 								<tr>
 									<td>3</td>
@@ -180,15 +180,15 @@
 								</tr>
 								<tr>
 									<td>4</td>
-									<td>Radar Backwoods Camo Hunting Blind</td>
+									<td>Barronett Radar Backwoods Camo Hunting Blind</td>
 								</tr>
 								<tr>
 									<td>5</td>
-									<td>Eskimo FatFish 949 Ice Shack</td>
+									<td>Eskimo Quickfish 2</td>
 								</tr>
 								<tr>
 									<td>6</td>
-									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
+									<td>8-in Ion Ice Auger w/ Reverse</td>
 								</tr>
 								<tr>
 									<td>7</td>
@@ -196,15 +196,15 @@
 								</tr>
 								<tr>
 									<td>8</td>
-									<td>Moultrie A-20 Game Camera </td>
+									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
 								</tr>
 								<tr>
 									<td>9</td>
-									<td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+									<td>13 Fishing Wicked Ice Combo</td>
 								</tr>
 								<tr>
 									<td>10</td>
-									<td>Vexilar FL-8SE Genz Pack Fish Sonar </td>
+									<td>Vexilar Fish Scout Camera</td>
 								</tr>
 								<tr>
 									<td>11</td>
@@ -212,23 +212,23 @@
 								</tr>
 								<tr>
 									<td>12</td>
-									<td>Eskimo 43cc 10-in Mako Ice Auger</td>
+									<td>Ice Armor Parka</td>
 								</tr>
 								<tr>
 									<td>13</td>
-									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+									<td>Moultrie A-30 Game Camera</td>
 								</tr>
 								<tr>
 									<td>14</td>
-									<td>Beaver Dam Bucket</td>
+									<td>$50 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>15</td>
-									<td> Garmin eTrex10 GPS</td>
+									<td>Garmin eTrex10 GPS</td>
 								</tr>
 								<tr>
 									<td>16</td>
-									<td> Uncle Josh Original Beaver Dam Tip Up</td>
+									<td>Scheels Deluxe Combo Case</td>
 								</tr>
 								<tr>
 									<td>17</td>
@@ -240,27 +240,27 @@
 								</tr>
 								<tr>
 									<td>19</td>
-									<td>Ice Armor Gloves </td>
+									<td>Eskimo P1 Propane Rocker Auger</td>
 								</tr>
 								<tr>
 									<td>20</td>
-									<td>HT Rod Locker w/ Tip Up and Jig Poles</td>
+									<td>$50 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>21</td>
-									<td>Ice Armor Parka</td>
+									<td>Eskimo 43cc 10-in Mako Ice Auger</td>
 								</tr>
 								<tr>
 									<td>22</td>
-									<td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+									<td>13 Fishing Descent Ice Reel</td>
 								</tr>
 								<tr>
 									<td>23</td>
-									<td>Mr. Heater Propane Little Buddy</td>
+									<td>Eskimo 8-Inch Hand Auger</td>
 								</tr>
 								<tr>
 									<td>24</td>
-									<td>Dangler</td>
+									<td>Eskimo Quickfish 2</td>
 								</tr>
 								<tr>
 									<td>25</td>
@@ -268,35 +268,35 @@
 								</tr>
 								<tr>
 									<td>30</td>
-									<td>Pflueger Trion Spinning Reel</td>
+									<td>Pflueger Monarch Spinning Reel</td>
 								</tr>
 								<tr>
 									<td>35</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>40</td>
-									<td>River's Edge Classic Ladder Stand</td>
+									<td>River's Edge Ladder Stand</td>
 								</tr>
 								<tr>
 									<td>45</td>
-									<td>Eskimo FatFish 949 Ice Shack</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>50</td>
-									<td>Jiffy Powerhead Ice Auger</td>
+									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
 								</tr>
 								<tr>
 									<td>55</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
+									<td>Eskimo 8-Inch Hand Auger</td>
 								</tr>
 								<tr>
 									<td>60</td>
-									<td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
+									<td>Scheels Deluxe Combo Case</td>
 								</tr>
 								<tr>
 									<td>65</td>
-									<td>Frabill Straight Line 101 Ice Reel</td>
+									<td>Eskimo Quickfish 2</td>
 								</tr>
 								<tr>
 									<td>70</td>
@@ -304,11 +304,11 @@
 								</tr>
 								<tr>
 									<td>75</td>
-									<td>Jaw Jacker</td>
+									<td>13 Fishing Descent Ice Reel</td>
 								</tr>
 								<tr>
 									<td>80</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag + Scheels Gift Card</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>85</td>
@@ -320,39 +320,39 @@
 								</tr>
 								<tr>
 									<td>95</td>
-									<td>Ice Armor Gloves</td>
+									<td>Eskimo 7-Inch Hand Auger</td>
 								</tr>
 								<tr>
 									<td>100</td>
-									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
-								</tr>
-								<tr>
-									<td>105</td>
-									<td> SKINZ IT</td>
-								</tr>
-								<tr>
-									<td>110</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
-								</tr>
-								<tr>
-									<td>115</td>
-									<td>Berkley Combo</td>
-								</tr>
-								<tr>
-									<td>120</td>
-									<td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
-								</tr>
-								<tr>
-									<td>125</td>
 									<td>Ice Castle</td>
 								</tr>
 								<tr>
+									<td>105</td>
+									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
+								</tr>
+								<tr>
+									<td>110</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>115</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
+								</tr>
+								<tr>
+									<td>120</td>
+									<td>Barronett Radar Backwoods Camo Hunting Blind</td>
+								</tr>
+								<tr>
+									<td>125</td>
+									<td>SKINZ IT</td>
+								</tr>
+								<tr>
 									<td>130</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
+									<td>Rivers Edge Ladder Stand</td>
 								</tr>
 								<tr>
 									<td>135</td>
-									<td>Eskimo FatFish 949 Ice Shack</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
 								</tr>
 								<tr>
 									<td>140</td>
@@ -360,11 +360,11 @@
 								</tr>
 								<tr>
 									<td>145</td>
-									<td>Berkley Combo</td>
+									<td>Eskimo 7-Inch Hand Auger</td>
 								</tr>
 								<tr>
 									<td>150</td>
-									<td>Eskimo FatFish 949 Ice Shack</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
 								</tr>
 								<tr>
 									<td>155</td>
@@ -372,19 +372,19 @@
 								</tr>
 								<tr>
 									<td>160</td>
-									<td>Beaver Dam Thermal Tip Up</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>165</td>
-									<td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+									<td>13 Fishing Descent Ice Reel</td>
 								</tr>
 								<tr>
 									<td>170</td>
-									<td> Eskimo Hand Auger</td>
+									<td>Dangler Rod Holder and Dangler Trip-Up</td>
 								</tr>
 								<tr>
 									<td>175</td>
-									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
+									<td>Eskimo P1 Propane Rocker Auger</td>
 								</tr>
 								<tr>
 									<td>180</td>
@@ -392,7 +392,7 @@
 								</tr>
 								<tr>
 									<td>185</td>
-									<td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
+									<td>$50 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>190</td>
@@ -400,23 +400,23 @@
 								</tr>
 								<tr>
 									<td>195</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
+									<td>Scheels Outfitters Rectangular Ice Combo Bag + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>200</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
+									<td>*$1,000 Cash</td>
 								</tr>
 								<tr>
 									<td>205</td>
-									<td>Jaw Jacker</td>
+									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
 								</tr>
 								<tr>
 									<td>210</td>
-									<td>Beaver Dam Thermal Tip Up</td>
+									<td>Eskimo QuickFlip One-Man-Shelter</td>
 								</tr>
 								<tr>
 									<td>215</td>
-									<td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+									<td>$50 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>220</td>
@@ -424,19 +424,19 @@
 								</tr>
 								<tr>
 									<td>225</td>
-									<td>Pflueger Trion Spinning Reel</td>
+									<td>Pflueger Monarch Ice Spinning Reel</td>
 								</tr>
 								<tr>
 									<td>230</td>
-									<td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+									<td>$50 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>235</td>
-									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
+									<td>Eskimo P1 Propane Rocker Auger</td>
 								</tr>
 								<tr>
 									<td>240</td>
-									<td>Mr. Heater Propane Little Buddy</td>
+									<td>13 Fishing Wicked Ice Combo</td>
 								</tr>
 								<tr>
 									<td>245</td>
@@ -444,31 +444,31 @@
 								</tr>
 								<tr>
 									<td>250</td>
-									<td>Beaver Dam Bucket</td>
+									<td>Eskimo 6-Inch Hand Auger</td>
 								</tr>
 								<tr>
 									<td>255</td>
-									<td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+									<td>Eskimo Quickfish 2</td>
 								</tr>
 								<tr>
 									<td>260</td>
-									<td>Moultrie A-20 Game Camera </td>
+									<td>Moultrie A-30 Game Camera</td>
 								</tr>
 								<tr>
 									<td>265</td>
-									<td>River's Edge Classic Ladder Stand</td>
+									<td>River's Edge Ladder Stand</td>
 								</tr>
 								<tr>
 									<td>270</td>
-									<td>HT Rod Locker w/ Tip Up and Jig Poles</td>
+									<td>Dangler Rod Holder and Dangler Trip-Up</td>
 								</tr>
 								<tr>
 									<td>275</td>
-									<td>Pro Classic Ice Fishing Combo</td>
+									<td>Frabill Straight Line 101 Ice Reel + $25 Mega/Holiday Gift Card</td>
 								</tr>
 								<tr>
 									<td>280</td>
-									<td>Eskimo High Compression 8-in Propane Ice Auger</td>
+									<td>Eskimo 43cc 8-in Mako Ice Auger</td>
 								</tr>
 								<tr>
 									<td>285</td>
@@ -476,11 +476,11 @@
 								</tr>
 								<tr>
 									<td>290</td>
-									<td>Vexilar FL-8SE Genz Pack Fish Sonar </td>
+									<td>Vexilar FL-8SE Genz Pack Fish Sonar</td>
 								</tr>
 								<tr>
 									<td>295</td>
-									<td>Dangler</td>
+									<td>Eskimo FatFish 949i Ice Shack</td>
 								</tr>
 								<tr>
 									<td>300</td>
