--- a/directions.html
+++ b/directions.html
@@ -19,6 +19,8 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
 
+<!-- Google Maps API -->
+	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -170,8 +172,44 @@
 				</div>
 			</div>
 			<div class="col-md-6">
-				<img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
+				<!-- <img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map"> -->
+				<div id="map" style="height: 700px; width: 600px;">
 			</div>
+			</div>
+
+<script type="text/javascript">
+    var locations = [
+			['The Highschool Competition', 44.9246737,-91.3141536,3],
+			['The View', 44.9261635, -91.3124309, 2],
+      ['The Edge', 44.9824545,-91.3517764, 1],
+    ];
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 13,
+      center: new google.maps.LatLng(44.9512752,-91.3190152),
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
+  </script>
+
+
 		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
