--- a/directions.html
+++ b/directions.html
@@ -177,11 +177,14 @@
 			</div>
 			</div>
 
+
+<!-- GOOGLE MAPS INIT SCRIPT -->
 <script type="text/javascript">
     var locations = [
-			['The Highschool Competition', 44.9246737,-91.3141536,3],
+    		['Kids Klub', 44.9254583,-91.3133903,3],
+			['WIFA High School Tournament', 44.9253737,-91.3141536,3],
 			['The View', 44.9261635, -91.3124309, 2],
-      ['The Edge', 44.9824545,-91.3517764, 1],
+      ['The Edge', 44.981204,-91.3425272, 1],
     ];
 
     var map = new google.maps.Map(document.getElementById('map'), {
