--- a/prizes.html
+++ b/prizes.html
@@ -296,7 +296,7 @@
 								</tr>
 								<tr>
 									<td>65</td>
-									<td>Eskimo Quickfish 2</td>
+									<td>Eskimo Quickflip 2</td>
 								</tr>
 								<tr>
 									<td>70</td>
@@ -448,7 +448,7 @@
 								</tr>
 								<tr>
 									<td>255</td>
-									<td>Eskimo Quickfish 2</td>
+									<td>Eskimo Quickflip 2</td>
 								</tr>
 								<tr>
 									<td>260</td>
