Change 235 Eskimo Propane Auger

--- a/prizes.html
+++ b/prizes.html
@@ -296,7 +296,7 @@
 								</tr>
 								<tr>
 									<td>65</td>
-									<td>Eskimo Quickflip 2</td>
+									<td>Eskimo QuickFlip 2</td>
 								</tr>
 								<tr>
 									<td>70</td>
@@ -432,7 +432,7 @@
 								</tr>
 								<tr>
 									<td>235</td>
-									<td>Eskimo P1 Propane Rocker Auger</td>
+									<td>Eskimo Propane Auger</td>
 								</tr>
 								<tr>
 									<td>240</td>
@@ -448,7 +448,7 @@
 								</tr>
 								<tr>
 									<td>255</td>
-									<td>Eskimo Quickflip 2</td>
+									<td>Eskimo QuickFlip 2</td>
 								</tr>
 								<tr>
 									<td>260</td>
