Map fix wifa file made

--- a/wifa.html
+++ b/wifa.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
 	<meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
 	<meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Jig's Up | Directions</title>
+	<title>Jig's Up | Home</title>
 	<!-- Bootstrap -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
 
-	<!-- Google Maps API -->
-	<!-- <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script> -->
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,7 +73,7 @@
 								<li role="presentation" class="divider"></li>
 								<li><a href="pastResults.html">Past Results</a></li>
 								<li role="presentation" class="divider"></li>
-								<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
+								<li><a href="assets/2017_Rules_of_the_Tournament2.pdf" target="_blank">Rules</a></li>
 								<li role="presentation" class="divider"></li>
 								<li><a href="wifa.html">WIFA Tournament</a></li>
 							</ul>
@@ -89,6 +82,7 @@
 						<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
 						<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
 						<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
+
 						<li class="social-media">
 							<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
 								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
@@ -116,188 +110,9 @@
 			<!-- /.container -->
 		</nav>
 	</head>
-
 	<body>
-		<div class="wrapper">
-			<br />
-			<!-- BREAK -->
-			<br />
-			<!-- BREAK -->
-			<br />
-			<!-- BREAK -->
-			<section id="directionsHeader">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6">
-							<h2 class="headers">Directions</h2>
-							<br />
-							<!-- BREAK -->
-						</div>
-						<!-- #col-sm-8  -->
-					</div>
-					<!-- #row  -->
-				</div>
-				<!-- #container  -->
-			</section>
-			<div class="container">
-				<div class="panel-group col-md-6" id="accordion">
-					<div class="panel panel-default">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									The Edge Pub &amp; Eatery
-								</h4>
-								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-							</div>
-						</a>
-						<div id="collapse1" class="panel-collapse collapse ">
-							<div class="panel-body">
-								<iframe alt="The Edge Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-								allowfullscreen></iframe>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									The View
-								</h4>
-								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-							</div>
-						</a>
-						<div id="collapse2" class="panel-collapse collapse">
-							<div class="panel-body">
-								<iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									WIFA Tournament & Kids Klub
-								</h4>
-								<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-							</div>
-						</a>
-						<div id="collapse3" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div id="map2" style="height: 450px; width:100%;"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<!-- <img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map"> -->
-					<div id="map" style="height: 700px; width: 100%;">
-					</div>
-				</div>
-
-
-				<!-- GOOGLE MAPS INIT SCRIPT -->
-				<script type="text/javascript">
-					function initMap() {
-
-						var locations = [
-						['The View', 44.9261635, -91.3124309, 2],
-						['The Edge', 44.981204,-91.3425272, 1]
-						];
-
-						var map = new google.maps.Map(document.getElementById('map'), {
-							zoom: 13,
-							center: new google.maps.LatLng(44.9512752,-91.3190152),
-							mapTypeId: google.maps.MapTypeId.ROADMAP
-						});
-
-						var infowindow = new google.maps.InfoWindow();
-
-						var marker, i;
-
-						for (i = 0; i < locations.length; i++) {
-							marker = new google.maps.Marker({
-								position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-								map: map,
-								label: {
-									text:locations[i][0],
-									color: 'black',
-									fontWeight: 'bold'
-								}
-							});
-
-							google.maps.event.addListener(marker, 'click', (function(marker, i) {
-								return function() {
-									infowindow.setContent(locations[i][0]);
-									infowindow.open(map, marker);
-								}
-							})(marker, i));
-						}
-					}
-
-					function initMap2() {
-
-						var locations2 = [
-						['Kids Klub', 44.9254583,-91.3133903,3],
-						['WIFA Tournament', 44.9253737,-91.3141536,3],
-						// ['The View', 44.9261635, -91.3124309, 2],
-						];
-
-						var map2 = new google.maps.Map(document.getElementById('map2'), {
-							zoom: 17,
-							center: new google.maps.LatLng(44.9275316,-91.3154554),
-							mapTypeId: google.maps.MapTypeId.ROADMAP
-						});
-
-						var infowindow2 = new google.maps.InfoWindow();
-
-						var marker2, i;
-
-						for (i = 0; i < locations2.length; i++) {
-							marker2 = new google.maps.Marker({
-								position: new google.maps.LatLng(locations2[i][1], locations2[i][2]),
-								map: map2,
-								label: {
-									text:locations2[i][0],
-									color: 'black',
-									fontWeight: 'bold'
-								}
-							});
-
-							google.maps.event.addListener(marker2, 'click', (function(marker, i) {
-								return function() {
-									infowindow2.setContent(locations[i][0]);
-									infowindow2.open(map2, marker);
-								}
-							})(marker2, i));
-						}
-
-						
-					}
-
-					function initMaps() {
-						initMap();
-						initMap2();
-					}
-
-					//Method for when WIFA Tournament & Kids Klub tab gets shown, otherwise the image appears grey
-					$('#collapse3').on('shown.bs.collapse', function () {
-						google.maps.event.trigger(map2, "resize");
-					});
-				</script>
-				<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM&callback=initMaps"></script>
-
-
-			</div>
-
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-			<!-- Include all compiled plugins (below), or include individual files as needed -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-			<script src="js/main.js" type="text/javascript"></script>
-		</div>
+		<!-- Stuff Here -->
 	</body>
-
 	<footer>
 		<div class="footer hidden-xs">
 			<div class="sponsorBar">
