--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,8 @@
 							<li><a href="pastResults.html">Past Results</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
+							<li role="presentation" class="divider"></li>
+								<li><a href="wifa.html">WIFA Tournament</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
