--- a/sponsors.html
+++ b/sponsors.html
@@ -24,118 +24,120 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-	<!-- FAVICON -->
-	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-	<link rel="manifest" href="favicon/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+		<!-- FAVICON -->
+		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-					<span class="menuTrigger" id="hamburger-one">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+						<span class="menuTrigger" id="hamburger-one">
 							<span class="mainLine"></span>
-					</span>
-				</button>
-				<a class="navbar-brand" href="index.html">
-					<img alt="logo" src="images/logo.png" />
-				</a>
-				<!-- Logo top aligns with navbar text top. -->
-			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
-
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
-					<li class="dropdown">
-						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="liveResults.html">Live Results</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="directions.html">Directions</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="schedule.html">Schedule</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="lodging.html">Lodging</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="pastResults.html">Past Results</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
-						</ul>
-					</li>
-					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
-					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
-					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
-					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
-					<li class="social-media">
-						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
-	</nav>
-</head>
-
-<body>
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	<section id="prizeGrid">
-		<!-- Images must be 300x255 -->
-		<div class="container">
-			<div class="row">
-				<div class="text-center">
-					<h2 class="headers"><b>Title Sponsors</b></h2>
+						</span>
+					</button>
+					<a class="navbar-brand" href="index.html">
+						<img alt="logo" src="images/logo.png" />
+					</a>
+					<!-- Logo top aligns with navbar text top. -->
 				</div>
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
+				<!-- Collect the nav links, forms, and other content for toggling -->
+
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="sliding-middle-out"><a href="index.html">Home</a></li>
+						<li class="dropdown">
+							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="liveResults.html">Live Results</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="directions.html">Directions</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="schedule.html">Schedule</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="lodging.html">Lodging</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="pastResults.html">Past Results</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="wifa.html">WIFA Tournament</a></li>
+							</ul>
+						</li>
+						<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
+						<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+						<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
+						<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
+						<li class="social-media">
+							<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+							</a>
+						</li>
+						<li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img>
+							</a>
+						</li>
+						<li>
+							<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+								<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+							</a>
+						</li>
+						<li>
+							<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+								<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!-- /.navbar-collapse -->
+			</div>
+			<!-- /.container -->
+		</nav>
+	</head>
+
+	<body>
+		<br />
+		<!-- BREAK -->
+		<br />
+		<!-- BREAK -->
+		<section id="prizeGrid">
+			<!-- Images must be 300x255 -->
+			<div class="container">
+				<div class="row">
+					<div class="text-center">
+						<h2 class="headers"><b>Title Sponsors</b></h2>
+					</div>
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-6 center">
+						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+					</div>
+
+					<div class="col-sm-6 center">
+						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
+					</div>
+				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-sm-6 center">
-					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
-				</div>
-
-				<div class="col-sm-6 center">
-					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
-				</div>
-			</div>
-			<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			</br>
 
 			<!-- BREAK -->
@@ -206,37 +208,37 @@
 				<!-- BREAK -->
 				<br />
 				<!-- BREAK -->
-	</section>
+			</section>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-</body>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+			<script src="/js/boostrap-media-lightbox.min.js"></script>
+			<script src="/js/boostrap-media-lightbox.js"></script>
+			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+			<script src="js/main.js" type="text/javascript"></script>
+		</body>
 
-<footer>
-	<div class="footer hidden-xs">
-		<br />
-		<!-- BREAK -->
-		<p>
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
-		</p>
-	</div>
-	<div class="footer visible-xs">
-		<br />
-		<!-- BREAK -->
-		<p class="small-footer">
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
-		</p>
-	</div>
-</footer>
+		<footer>
+			<div class="footer hidden-xs">
+				<br />
+				<!-- BREAK -->
+				<p>
+					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+					<br />
+					<!-- BREAK -->
+				</p>
+			</div>
+			<div class="footer visible-xs">
+				<br />
+				<!-- BREAK -->
+				<p class="small-footer">
+					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+					<br />
+					<!-- BREAK -->
+				</p>
+			</div>
+		</footer>
 
-</html>
+		</html>
