Added WIFA as a link

--- a/wifa.html
+++ b/wifa.html
@@ -75,7 +75,7 @@
 								<li role="presentation" class="divider"></li>
 								<li><a href="assets/2017_Rules_of_the_Tournament2.pdf" target="_blank">Rules</a></li>
 								<li role="presentation" class="divider"></li>
-								<li><a href="wifa.html">WIFA Tournament</a></li>
+								<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
 							</ul>
 						</li>
 						<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
@@ -111,7 +111,19 @@
 		</nav>
 	</head>
 	<body>
-		<!-- Stuff Here -->
+		<div class="wrapper>" <br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h2 class="headers">Jig's Up host WIFA Ice Fishing Constest</h2>
+						<h3 class="headers">Lake Wissota | February 10, 2018 | 7:30 am - 1 pm</h3>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<footer>
 		<div class="footer hidden-xs">
