--- a/tickets.html
+++ b/tickets.html
@@ -77,7 +77,7 @@
 								<li role="presentation" class="divider"></li>
 								<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
 								<li role="presentation" class="divider"></li>
-								<li><a href="wifa.html">WIFA Tournament</a></li>
+								<li><a href="assets/WIFA_details.pdf">WIFA Tournament</a></li>
 							</ul>
 						</li>
 						<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
