--- a/liveResults.html
+++ b/liveResults.html
@@ -127,7 +127,7 @@
 							<br />
 							<!-- BREAK -->
 							<h2 class="headers">Live Results</h2>
-							<h3>Join us on February 10th on this page for live updates!</h3>
+							<h3>View live results <a href="https://jigsup-entry.herokuapp.com/publicList">here</a>!</h3>
 						</div>
 						<div class="col-xs-6">
 							<br />
